# esp-gateway

./: Cargo.toml  Readme.md
esp-firmware/: Cargo.toml
esp-firmware/.cargo/: config.toml
esp-firmware/src/: main.rs
serial-forwarder/: Cargo.toml  testdata.json
serial-forwarder/src/: main.rs
src/: main.rs
