[package]
name = "serial-forwarder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# HTTP requests
reqwest = { version = "0.11.18", features = ["json"] }
# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
# Async runtime
tokio = { version = "1.28.2", features = ["full"] }
